--- a/ansible/roles/parasight_dbserver/tasks/main.yml
+++ b/ansible/roles/parasight_dbserver/tasks/main.yml
@@ -5,9 +5,9 @@
   include_vars: "{{ ansible_facts['distribution'] }}-{{ ansible_facts['distribution_major_version'] }}.yml"
 
 
-- include: install/main.yml
+- include_tasks: install/main.yml
 
-- include: service/main.yml
+- include_tasks: service/main.yml
 
-- include: config/main.yml
+- include_tasks: config/main.yml
 
