fix apache module file names

--- a/ansible/roles/parasight_webserver/vars/Ubuntu-22.yml
+++ b/ansible/roles/parasight_webserver/vars/Ubuntu-22.yml
@@ -21,8 +21,9 @@ parasight_python: python3.10
 parasight_python_ver: python3.10
 parasight_pip: pip3
 apache_mods:
-  - proxy
-  - proxy_http
+  - proxy.conf
+  - proxy_http.load
+  - proxy_http.conf
   - ssl.load
   - ssl.conf
   - socache_shmcb.load
