fix apache module file names

--- a/ansible/roles/parasight_webserver/vars/Debian-10.yml
+++ b/ansible/roles/parasight_webserver/vars/Debian-10.yml
@@ -24,8 +24,9 @@ parasight_python: python3.7
 parasight_python_ver: python3.7
 parasight_pip: pip3
 apache_mods:
-  - proxy
-  - proxy_http
+  - proxy.load
+  - proxy.conf
+  - proxy_http.load
   - ssl.load
   - ssl.conf
   - socache_shmcb.load
