--- a/ansible/roles/parasight_common/vars/Ubuntu-22.yml
+++ b/ansible/roles/parasight_common/vars/Ubuntu-22.yml
@@ -5,7 +5,7 @@ packages:
   - vim-syntastic
   - flake8
   - python3-flake8
-  - ctags
+  - exuberant-ctags
 nmap_dev_packages:
   - build-essential
   - autoconf
@@ -13,7 +13,7 @@ nmap_dev_packages:
   - libssh2-1-dev
   - python2-dev
   - python3-dev
-  - liblua5.3-dev
+  - liblua5.4-dev
 parasight_blocking_packages:
   - nmap
   - nmap-common
