ensure cron is installed

--- a/ansible/roles/parasight_webserver/vars/Debian-10.yml
+++ b/ansible/roles/parasight_webserver/vars/Debian-10.yml
@@ -20,6 +20,7 @@ packages:
   - python3-virtualenv
   - python3-setuptools
   - python3-dev
+  - cron
 parasight_python: python3.7
 parasight_python_ver: python3.7
 parasight_pip: pip3
