--- a/ansible/roles/parasight_webserver/vars/Debian-11.yml
+++ b/ansible/roles/parasight_webserver/vars/Debian-11.yml
@@ -17,6 +17,7 @@ packages:
   - python3-virtualenv
   - python3-setuptools
   - python3-dev
+  - cron
 parasight_python: python3.9
 parasight_python_ver: python3.9
 parasight_pip: pip3
