--- a/ansible/roles/parasight_webserver/vars/Ubuntu-18.yml
+++ b/ansible/roles/parasight_webserver/vars/Ubuntu-18.yml
@@ -20,6 +20,7 @@ packages:
   - python3-virtualenv
   - python3-setuptools
   - python3-dev
+  - cron
 parasight_python: python3.6
 parasight_python_ver: python3.6
 parasight_pip: pip3
