update git URL for HTTPS

--- a/ansible/roles/parasight_webserver/tasks/app/main.yml
+++ b/ansible/roles/parasight_webserver/tasks/app/main.yml
@@ -28,7 +28,7 @@
 
 - name: Checkout parasight code
   git:
-    repo: 'git@github.com:aaronwmorris/parasight.git'
+    repo: 'https://github.com/aaronwmorris/parasight.git'
     dest: /home/parasight/git/parasight
     umask: '0077'
     accept_hostkey: yes
