--- a/ansible/roles/parasight_webserver/vars/Ubuntu-22.yml
+++ b/ansible/roles/parasight_webserver/vars/Ubuntu-22.yml
@@ -18,6 +18,7 @@ packages:
   - python3-setuptools
   - python3-dev
   - cron
+  - rsyslog
 parasight_python: python3.10
 parasight_python_ver: python3.10
 parasight_pip: pip3
